@@ -145,14 +145,6 @@ module ApplicationHelper
   end
 
   #----------------------------------------------------------------------------
-  def update_sidebar
-    update_page do |page|
-      page[:sidebar].replace_html :partial => "sidebar_index"
-      page[:filters].visual_effect :shake, :duration => 0.4, :distance => 3
-    end
-  end
-
-  #----------------------------------------------------------------------------
   def refresh_sidebar(action = nil, shake = nil)
     update_page do |page|
       page[:sidebar].replace_html :partial => "layouts/sidebar", :locals => { :action => action }
