@@ -4,8 +4,13 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Mon, Apr 20, 2009
+---------------------------------------------------------------------
+- Finished with recently viewed items sidebar panel.
+
 Sun, Apr 19, 2009
 ---------------------------------------------------------------------
+- Refresh recently viewed items when creating, editing, or deleting core objects.
 
 Sat, Apr 18, 2009
 ---------------------------------------------------------------------
